force-app/src/objects/cpm__Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Account_Type__c</fullName>
        <description>Whether this is a transaction or a savings account.</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Account_holder_name__c</fullName>
        <description>The account holder name of the bank account</description>
        <label>Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Automatic_Import_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this bank account should be included in the nightly transaction import or not.</description>
        <label>Automatic Import Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__BBAN__c</fullName>
        <description>The Basic Bank Account Number.</description>
        <label>BBAN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__BIC__c</fullName>
        <description>The BIC of the bank.</description>
        <label>BIC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Default_Bank_Account_Currency__c</fullName>
        <description>The default currency of the bank account in ISO 4217.</description>
        <label>Default Bank Account Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__IBAN__c</fullName>
        <description>The international bank account number.</description>
        <label>IBAN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Imported_Transaction_Date__c</fullName>
        <description>The last time an nightly automatic import was run successfully for this bank account.</description>
        <label>Last Imported Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <label>Bank Feed Account</label>
    <nameField>
        <label>Bank Feed Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Feed Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>